src/objects/SALARY_DETAIL__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <description>RTGS, NEFT, Cheque, Cash</description>
        <label>Mode of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>RTGS, NEFT, Cheque, Cash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Basic__c</fullName>
        <label>Basic</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credited_To__c</fullName>
        <label>EMPLOYEE</label>
        <referenceTo>Employees__c</referenceTo>
        <relationshipLabel>SALARY DETAILS</relationshipLabel>
        <relationshipName>SALARY_DETAILS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gross_Salary__c</fullName>
        <formula>Total_Earnings__c -  PF_Deduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRA__c</fullName>
        <label>HRA</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PF_Deduction__c</fullName>
        <label>PF Deduction</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary_Credit_Date__c</fullName>
        <label>Salary Credit Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salary_ID__c</fullName>
        <label>Salary ID</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Allowance__c</fullName>
        <label>Special Allowance</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Earnings__c</fullName>
        <formula>Basic__c + HRA__c + Special_Allowance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SALARY DETAIL</label>
    <nameField>
        <displayFormat>SAL-{000000}</displayFormat>
        <label>Salary-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SALARY DETAILS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Bank_account</fullName>
        <active>true</active>
        <description>Bank account number cannot be changed.</description>
        <errorConditionFormula>IF(ISCHANGED( Bank_Account_Number__c) , TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Illeagal change of bank acc no.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inactive_emp_sal</fullName>
        <active>true</active>
        <description>cannot enter salary details of inactive employee</description>
        <errorConditionFormula>Credited_To__r.Is_Active__c == FALSE</errorConditionFormula>
        <errorDisplayField>Credited_To__c</errorDisplayField>
        <errorMessage>cannot enter salary details of inactive employee</errorMessage>
    </validationRules>
</CustomObject>